--- a/03-07-function-call-apply/index.html
+++ b/03-07-function-call-apply/index.html
@@ -11,6 +11,14 @@
       }
 
       const me = { name: `Warlley` };
+
+      const pessoa = {
+        nome: "Warlley",
+        idade: 21,
+        genero: "masculino",
+      };
+
+      document.body.innerText = sum.call(pessoa, 1, 1);
     </script>
   </body>
 </html>
