--- a/03-12-timers-setinterval-settimeout/index.html
+++ b/03-12-timers-setinterval-settimeout/index.html
@@ -6,12 +6,12 @@
   <body>
     <script>
       const interval = setInterval(() => {
-        console.log(`Executou`);
-      }, 5000);
+        console.log("Executou");
+      }, 2000);
 
       setTimeout(() => {
         clearInterval(interval);
-      }, 20000);
+      }, 10000);
     </script>
   </body>
 </html>
