--- a/04-03-metodos-em-classes/index.html
+++ b/04-03-metodos-em-classes/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <title>Document</title>
   </head>
   <body>
     <script>
       class Human {
-        hungry = true;
+        fome = true;
 
-        eat() {
-          this.hungry = false;
+        comer() {
+          this.fome = false;
         }
       }
 
