--- a/05-01-o-que-e-desestruracao/index.html
+++ b/05-01-o-que-e-desestruracao/index.html
@@ -5,18 +5,18 @@
   </head>
   <body>
     <script>
-      const person = {
-        name: "Italo",
-        age: 14,
+      const pessoa = {
+        nome: "Warlley",
+        idade: 21,
       };
 
-      function introduce({ name, age }) {
-        console.log(`oi! meu nome é ${nome} e eu tenho ${age} anos.`);
+      function introduce({ nome, idade }) {
+        console.log(`oi! meu nome é ${nome} e eu tenho ${idade} anos.`);
       }
 
-      const fruits = ["banana", "morango", "manga"];
+      const fruta = ["banana", "morango", "manga"];
 
-      const [firstFruit, secondFruit] = fruits;
+      const [primeiraFruta, segundaFruta] = fruta;
     </script>
   </body>
 </html>
