--- a/05-09-recebendo-argumentos-com-rest/index.html
+++ b/05-09-recebendo-argumentos-com-rest/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <script>
-      function createUser(name, age, ...contacts) {
+      function criarUsuario(nome, idade, ...contatos) {
         return {
-          name,
-          age,
-          contacts: [contact1, contact2, contact3],
+          nome,
+          idade,
+          contatos,
         };
       }
     </script>
