--- a/05-10-rest-em-desestruracoes/index.html
+++ b/05-10-rest-em-desestruracoes/index.html
@@ -7,8 +7,7 @@
   <body>
     <script>
       const fruits = ["banana", "morango", "manga", "kiwi", "maracuja"];
-      const [firstItem, secondItem] = fruits;
-      const otherItems = fruits.slice(2);
+      const [primeiraFruta, segundaFruta, ...restante] = fruits;
     </script>
   </body>
 </html>
