--- a/06-04-array-foreach/index.html
+++ b/06-04-array-foreach/index.html
@@ -8,10 +8,10 @@
     <script>
       const fruits = ["banana", "morango", "manga", "abacate"];
 
-      function eatAllFruits() {
-        fruits.forEach((fruit, index) => {
-          console.log(`Humm, acabei de comer um ${fruit}.`);
-          console.log(`Ele era o ${index + 1} item da minha lista`);
+      function comerTodasAsFrutas() {
+        fruits.forEach((fruits, index) => {
+          console.log(`Acabei de comer ${fruits}`);
+          console.log(`Ele era o ${index + 1} da minha lista`);
         });
       }
     </script>
