--- a/06-05-array-map/index.html
+++ b/06-05-array-map/index.html
@@ -8,8 +8,9 @@
     <script>
       const fruits = ["banana", "morango", "manga"];
 
-      const capitalizedFruits = fruits.map((fruit) => {
-        return fruit.toUpperCase();
+      const frutaMaiuscula = fruits.map((fruits) => {
+        console.log(fruits.toUpperCase());
+        return fruits.toUpperCase();
       });
     </script>
   </body>
