--- a/07-04-async-e-await/index.html
+++ b/07-04-async-e-await/index.html
@@ -16,14 +16,8 @@
         await sleep(5000);
         return "batata";
       }
-
-      function handleClick2() {
-        return new Promise((resolve, reject) => {
-          setTimeout(() => {
-            resolve("batata");
-          }, 5000);
-        });
-      }
+      //handleClick().then(console.log)
+      //throw usado como reject
     </script>
   </body>
 </html>
