--- a/07-06-promise-chaining/index.html
+++ b/07-06-promise-chaining/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <script>
-      fetch("https://jsonplaceholder.typecopi.com/todos/1")
+      fetch("https://jsonplaceholder.typicode.com/todos/1")
         .then((res) => res.json())
         .then((data) => console.log(data));
     </script>
