--- a/05-05-spread-opeator/index.html
+++ b/05-05-spread-opeator/index.html
@@ -6,18 +6,18 @@
   </head>
   <body>
     <script>
-      const parts = ["ombro", "joelho"];
-      const sentence = ["cabeça", parts[0], parts[1], "pés"];
+      const pecas = ["ombro", "joelho"];
+      const frase = ["cabeça", ...pecas, "pés"];
 
-      function createUser(name, age, ...contacts) {
+      function criarUsuario(nome, idade, ...contato) {
         return {
-          name,
-          age,
-          contacts,
+          nome,
+          idade,
+          contato,
         };
       }
 
-      const immutableArray = ["select", "*", "from", "posts"];
+      const immutableArray = ["select", "*", "from", "post"];
       const mutableArray = [...immutableArray];
       mutableArray.push("where id = 1");
     </script>
