--- a/05-06-clonando-objetos-com-spread/index.html
+++ b/05-06-clonando-objetos-com-spread/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <title>Document</title>
+    <style></style>
   </head>
   <body>
     <script>
-      const user = {
-        name: "warlleylopes",
-        email: "warlleyl@gmail.com",
+      const usuario = {
+        nome: "warlleylopes",
+        email: "warlley@gmail.com",
       };
 
-      const newUser = { ...user };
+      const novoUsuario = { ...usuario };
 
-      newUser.email = "joao@zinho.com";
-      newUser.name = "joaozinho123";
+      //      novoUsuario.email = "lele@gmail.com";
+      //      novoUsuario.nome = "warlleypereira";
     </script>
   </body>
 </html>
