--- a/06-03-array-of/index.html
+++ b/06-03-array-of/index.html
@@ -6,7 +6,10 @@
   </head>
   <body>
     <script>
-      const array = new Array(1, 2, 3, 4, 5);
+      const array1 = [1, 2, 3];
+      const array2 = Array.of(1, 2, 3);
+      const array3 = new Array(1, 2, 3);
+      array.forEach(() => console.log("a"));
     </script>
   </body>
 </html>
