--- a/06-08-array-find/index.html
+++ b/06-08-array-find/index.html
@@ -7,15 +7,15 @@
   <body>
     <script>
       const students = [
-        { name: "Lucas", grade: 8 },
-        { name: "Mario", grade: 2 },
-        { name: "Jean", grade: 10 },
-        { name: "Rogerio", grade: 6 },
-        { name: "Marcos", grade: 5 },
+        { nome: "Lucas", grade: 8 },
+        { nome: "Mario", grade: 2 },
+        { nome: "Jean", grade: 10 },
+        { nome: "Rogerio", grade: 6 },
+        { nome: "Marcos", grade: 5 },
       ];
 
-      const specificStudent = students.find((pupil) => {
-        if (pupil.name === "Jean") {
+      const estudanteEspecifico = students.find((aluno) => {
+        if (aluno.nome === "Jean") {
           return true;
         }
       });
