--- a/06-09-array-some-e-array-every/index.html
+++ b/06-09-array-some-e-array-every/index.html
@@ -6,19 +6,23 @@
   </head>
   <body>
     <script>
-      const guests = [
-        { name: "Marcos", grade: 23 },
-        { name: "Angelica", grade: 27 },
-        { name: "Luana", grade: 17 },
-        { name: "Leticia", grade: 45 },
-        { name: "Raphael", grade: 18 },
+      const convidados = [
+        { name: "Marcos", idade: 23 },
+        { name: "Angelica", idade: 27 },
+        { name: "Luana", idade: 17 },
+        { name: "Leticia", idade: 45 },
+        { name: "Raphael", idade: 18 },
       ];
 
       //existem maiores de idade na lista de convidados?
-      const hasAdults = guests.some((guest) => guest.age >= 18);
+      const temAdultos = convidados.some(
+        (convidados) => convidados.idade >= 18
+      );
 
       //todos os convidados são maiores de idade?
-      const everyoneIsAdult = guests.every((guest) => guest.age >= 18);
+      const todosSaoAdultos = convidados.every(
+        (convidados) => convidados.idade >= 18
+      );
     </script>
   </body>
 </html>
