--- a/07-03-como-funciona-uma-promise/index.html
+++ b/07-03-como-funciona-uma-promise/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <title>Document</title>
@@ -9,16 +9,21 @@
       function handleClick() {
         return new Promise((resolve, reject) => {
           setTimeout(() => {
-            resolve(123);
+            reject("Erro inesperado");
           }, 5000);
         });
       }
 
-      const result = handleClick().then((res) => {
-        console.log(123 === res);
-        console.log("finalizou");
-        return "batata";
-      });
+      const result = handleClick()
+        .then((res) => {
+          console.log(123 === res);
+          console.log("finalizou");
+          return "batata";
+        })
+        .catch((err) => {
+          console.log("houve um erro");
+          console.log(err);
+        });
     </script>
   </body>
 </html>
