--- a/07-05-promise-all/index.html
+++ b/07-05-promise-all/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <title>Document</title>
   </head>
   <body>
     <script>
-      const baseUrl = "html://jsonplaceholder.typecode.com";
+      const baseUrl = "https://jsonplaceholder.typicode.com";
 
       async function getTodos() {
-        Promise.all([
+        const promises = Promise.all([
           fetch(`${baseUrl}/todos/1`).then((res) => res.json()),
           fetch(`${baseUrl}/todos/2`).then((res) => res.json()),
           fetch(`${baseUrl}/todos/3`).then((res) => res.json()),
+          fetch(`${baseUrl}/todos/4`).then((res) => res.json()),
+          fetch(`${baseUrl}/todos/5`).then((res) => res.json()),
+          fetch(`${baseUrl}/todos/6`).then((res) => res.json()),
+          fetch(`${baseUrl}/todos/7`).then((res) => res.json()),
+          fetch(`${baseUrl}/todos/8`).then((res) => res.json()),
+          fetch(`${baseUrl}/todos/9`).then((res) => res.json()),
         ]);
 
-        return [firstTodo, secondTodo, thirdTodo];
+        return promises;
       }
 
       const todos = getTodos();
